# hw_27

./: .gitignore  db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/fixtures/: ads_csv_to_json.py  categories_csv_to_json.py
ads/management/commands/: load_fixtures.py
ads/migrations/: 0001_initial.py  0002_rename_categories_category_alter_ad_author.py
hw_27/: settings.py  urls.py
